--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,10 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "@azure/communication-chat": "^1.0.0",
+    "@azure/communication-identity": "^1.0.0"
+  },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
     "azure-functions-core-tools": "^3.0.3568",
