--- a/api/local.settings.json
+++ b/api/local.settings.json
@@ -2,6 +2,9 @@
     "IsEncrypted": false,
     "Values": {
       "FUNCTIONS_WORKER_RUNTIME": "node",
-      "resourceConnectionString": ""
+      "resourceEndpoint": "", 
+      "resourceConnectionString": "",
+      "redishostname": "",
+      "rediscachekey": ""
     }
   }
