--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,15 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "@azure/communication-chat": "^1.0.0",
+    "@azure/communication-common": "^1.0.0",
+    "@azure/communication-identity": "^1.0.0",
+    "@types/async-redis": "^1.1.2",
+    "@types/redis": "^2.8.30",
+    "async-redis": "^2.0.0",
+    "redis": "^3.1.2"
+  },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
     "azure-functions-core-tools": "^3.0.3568",
